deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tstr
spec:
  selector:
    matchLabels:
      app: tstr
  replicas: 1
  template:
    metadata:
      labels:
        app: tstr
    spec:
      containers:
        - name: tstr
          image: nanzhong/tstr:latest
          command: [ "tstr", "api" ]
          ports:
            - name: ui
              containerPort: 8000
            - name: api
              containerPort: 9000
