deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tstr-ui
  labels:
    app: tstr-ui
spec:
  ports:
  - port: 8000
    targetPort: ui
    protocol: TCP
  selector:
    app: tstr-ui
